# near-rust-cross-contract-examples

./: Readme.md
basic/: Cargo.toml
basic/src/: callback.rs  lib.rs
parallel/: Cargo.toml  build.sh
parallel/src/: callback.rs  lib.rs
sequence/: Cargo.toml
sequence/src/: callback.rs  lib.rs
state_rollback/: .gitignore  Cargo.toml
state_rollback/src/: callback.rs  lib.rs
